ch: add role base access control (RBAC)
